public/app/sass/_component.appspage.scss
/*
* Styles for app page
*/
body.apps-page
{
  padding-top:70px;
}

h2.apps-header
{
  font-family:"PT Sans", sans-serif;
  font-weight:700;
  font-size:300%;
  color:#000000;
}

.apps-page-part
{
  padding-top:60px;
}

p.apps-text
{
  font-family:"PT Sans", sans-serif;
  font-weight:400;
  font-size:150%;
  margin-top:15px !important;
}

p.apps-text > strong {
  color:#000000;
}

a.plan-route-button
{
  display:inline-block;
  width:350px;
  height:100px;
  background: rgb(191,41,41) url(../../images/logo.svg) left no-repeat;
  font-family:"PT Sans";
  color:#FFFFFF;
  font-size:300%;
  text-decoration: none;
  font-weight:700;
  background-size: 80px;
  padding-left:50px;
  padding-top:16px;
}

img.app-image 
{
  width:50%;
}

a.app-link
{
  display:inline-block;
  padding-left:20px;
}

h3.app-name
{
  font-family:'PT Sans', sans-serif;
  font-size:300%;
  font-weight:700;
}

h3.app-name small
{
  font-weight:400;
  color:#000000 !important;
}

div.thank-you-footer
{
  background:rgb(191,41,41);
  color:#FFFFFF;
}

hr.red {
  border-top: 1px solid rgb(191,41,41);
}

.irail-red-border
{
  border:1px solid rgb(191,41,41);
}

